--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.josmartinez.handyplanner">
 
     <application
+        android:name=".TaskIntentApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,5 +18,7 @@
             </intent-filter>
         </activity>
     </application>
+
+
 
 </manifest>
