--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
     }
 
     compileOptions {
@@ -36,7 +37,7 @@ android {
     sourceSets {
         main {
             java {
-                srcDirs 'src\\main\\java'
+                srcDirs 'src\\main\\java', 'src\\main\\java\\com\\josmartinez\\handyplanner\\model'
             }
         }
     }
